implemented feed page functionality

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,9 +1,9 @@
 .background-container {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-                url('https://images.pexels.com/photos/1310777/pexels-photo-1310777.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
-    background-size: auto;
-    background-position: center;
-    height: 89vh;
+    background: linear-gradient(rgba(131, 126, 126, 0.5), rgba(143, 142, 142, 0.5)),
+                url('https://skygarden.london/wp-content/uploads/2023/01/Larch-Tasting-0084-1-3840x2160.jpg');
+    background-size: cover;
+    background-position: cover;
+    height: 91.4vh;
     display: flex;
     justify-content: center;
     align-items: center;
