--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -13,7 +13,7 @@
       <mat-label>Email</mat-label>
       <input matInput type="email" formControlName="emailId" required />
       <mat-error *ngIf="signupForm.get('emailId')?.hasError('email')">
-        Invalid Email Adress
+        Invalid Email Address
       </mat-error>
     </mat-form-field>
     <mat-form-field class="fields">
