--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -1,1 +1,11 @@
-<p>feed works!</p>
+<mat-card class="feed-card" fxLayout="column">
+    <mat-card-content>
+      <p>Content</p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button color="primary">
+            <mat-icon>favorite</mat-icon>
+          </button>
+    </mat-card-actions>
+  </mat-card>
+  
