--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,3 @@
-<p>
   <mat-toolbar>
     <mat-toolbar-row>
       <span>
@@ -14,29 +13,52 @@
       <div class="example-button-row">
         <button
           mat-raised-button
+          class="center-button"
+          *ngIf="!isLoggedOut()"
+          color="primary"
+        >
+          Feed
+        </button>
+        <button
+          mat-raised-button
           *ngIf="isLoggedOut()"
           (click)="openSignupDialog()"
-          color="accent"
+          color="primary"
         >
           SignUp
         </button>
         <button
           mat-raised-button
+          *ngIf="!isLoggedOut()"
+          (click)="openFriendsDialog()"
+          color="primary"
+        >
+          Friends
+        </button>
+        <button
+          mat-raised-button
+          *ngIf="!isLoggedOut()"
+          (click)="openSignupDialog()"
+          color="primary"
+        >
+          New Post
+        </button>
+        <button
+          mat-raised-button
           *ngIf="isLoggedOut()"
           (click)="openLoginDialog()"
-          color="accent"
+          color="primary"
         >
           LogIn
         </button>
         <button
           mat-raised-button
+          (click)="logout()"
           *ngIf="!isLoggedOut()"
-          (click)="openLoginDialog()"
-          color="accent"
+          color="primary"
         >
           Logout
         </button>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
-</p>
