completed feed page functionality

--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -1,3 +1,7 @@
+<div class="modal-container">
+  <button class="close-btn" mat-icon-button (click)="onNoClick()">
+    <mat-icon>close</mat-icon>
+  </button>
 <h3 class="modal-heading">New Post</h3>
 <div class="editor-container">
   <div class="editor-content">
