--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -1,11 +1,26 @@
-<mat-card class="feed-card" fxLayout="column">
+<ng-container *ngIf="posts && posts.length > 0; else noPostsMessage">
+  <!-- Display posts -->
+  <mat-card *ngFor="let post of posts" class="feed-card">
     <mat-card-content>
-      <p>Content</p>
+      <mat-card-title [innerHTML]="post.content"></mat-card-title>
+      <div class="like-button">
+        <button mat-button color="primary" (click)="toggleLike(post)">
+          <mat-icon>{{ post.liked ? 'favorite' : 'favorite_border' }}</mat-icon>
+        </button>
+        <span class="like-count">{{ post.likes }}</span>
+      </div>
     </mat-card-content>
-    <mat-card-actions>
-        <button mat-button color="primary">
-            <mat-icon>favorite</mat-icon>
-          </button>
-    </mat-card-actions>
   </mat-card>
-  
+</ng-container>
+
+<ng-template #noPostsMessage>
+  <mat-card class="feed-card">
+    <mat-card-content class="bold-text">
+      <div class="mat-title">
+        Excited to create your post! 
+        <br>
+        Please click on the new post button.
+      </div>
+    </mat-card-content>
+  </mat-card>
+</ng-template>
