--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -1,6 +1,17 @@
 .feed-card {
-    margin: 20px auto;
-    max-width: 400px;
-    width: 100%;
-  }
-  
+  margin: 20px auto;
+  width: 60%;
+}
+
+.message-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ccc;
+  padding: 16px;
+}
+
+.mat-title {
+  font-weight: 800;
+  text-align: center;
+}
