--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,31 @@
-<div class="form-container">
-  <h2 class="form-title">Log In</h2>
-  <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <mat-form-field class="fields">
-      <mat-label>Email</mat-label>
-      <input matInput type="email" formControlName="emailId" required />
-      <mat-error *ngIf="loginForm.get('emailId')?.hasError('email')">
-        Invalid Email Adress
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field class="fields">
-      <mat-label>Password</mat-label>
-      <input matInput type="password" formControlName="password" required />
-    </mat-form-field>
-    <div class="button-container">
-      <button class="login-btn" mat-raised-button color="primary" type="submit">
-        Log In
-      </button>
-      <button class="close-btn" mat-raised-button color="warn" (click)="onNoClick()">Close</button>
-    </div>
-  </form>
+<div class="modal-container">
+  <button class="close-btn" mat-icon-button (click)="onNoClick()">
+    <mat-icon>close</mat-icon>
+  </button>
+  <div class="form-container">
+    <h2 class="form-title">Log In</h2>
+    <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <mat-form-field class="fields">
+        <mat-label>Email</mat-label>
+        <input matInput type="email" formControlName="emailId" required />
+        <mat-error *ngIf="loginForm.get('emailId')?.hasError('email')">
+          Invalid Email Adress
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="fields">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password" required />
+      </mat-form-field>
+      <div class="button-container">
+        <button
+          class="login-btn"
+          mat-raised-button
+          color="primary"
+          type="submit"
+        >
+          Log In
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
