--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,3 +1,7 @@
+<div class="modal-container">
+  <button class="close-btn" mat-icon-button (click)="onNoClick()">
+    <mat-icon>close</mat-icon>
+  </button>
 <div class="form-container">
   <h2 class="form-title">Sign Up</h2>
   <form class="signup-form" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
@@ -23,14 +27,6 @@
     <div class="button-container">
       <button class="login-btn" mat-raised-button color="primary" type="submit">
         Sign Up
-      </button>
-      <button
-        class="close-btn"
-        mat-raised-button
-        color="warn"
-        (click)="onNoClick()"
-      >
-        Close
       </button>
     </div>
   </form>
