--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -14,3 +14,12 @@ button {
   margin-right: 450px;
 }
 
+.user-greeting {
+  margin-right: 20px;
+}
+
+.toolbar {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
