--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -5,7 +5,7 @@
       <mat-card-title [innerHTML]="post.content"></mat-card-title>
       <div class="like-button">
         <button mat-button color="primary" (click)="toggleLike(post)">
-          <mat-icon>{{ post.liked ? 'favorite' : 'favorite_border' }}</mat-icon>
+          <mat-icon>{{ post.liked ? "favorite" : "favorite_border" }}</mat-icon>
         </button>
         <span class="like-count">{{ post.likes }}</span>
       </div>
@@ -17,8 +17,8 @@
   <mat-card class="feed-card">
     <mat-card-content class="bold-text">
       <div class="mat-title">
-        Excited to create your post! 
-        <br>
+        Excited to create your post!
+        <br />
         Please click on the new post button.
       </div>
     </mat-card-content>
