--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -1,5 +1,5 @@
 .feed-card {
-  margin: 20px auto;
+  margin: 40px auto;
   width: 60%;
 }
 
@@ -9,6 +9,10 @@
   justify-content: center;
   border: 1px solid #ccc;
   padding: 16px;
+}
+
+mat-card.mat-mdc-card.mdc-card.feed-card {
+  margin-top: 100px;
 }
 
 .mat-title {
