--- a/src/app/components/signup/signup.component.scss
+++ b/src/app/components/signup/signup.component.scss
@@ -8,6 +8,13 @@
   width: 500px;
 }
 
+.close-btn {
+  position: absolute;
+  top: 5px;
+  left: 450px;
+}
+
+
 .signup-form {
   width: 100%;
   display: flex;
@@ -22,22 +29,19 @@
 }
 
 Style the submit button button[type="submit"] {
-  width: 50%;
+  width: 100%;
   margin-top: 15px;
   align-self: center;
 }
+
 Style error messages .mat-error {
   color: red;
   font-size: 12px;
   margin-top: 5px;
 }
 
-.button-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.green-text {
+  color: green;
 }
 
-.login-btn {
-  margin-right: 10px;
-}
+
