--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -31,13 +31,22 @@
         <button
           mat-raised-button
           *ngIf="!isLoggedOut()"
-          (click)="openFriendsDialog()"
+          (click)="openViewFriendsDialog()"
           color="primary"
         >
-          Friends
+          My Friends
         </button>
         <button
           mat-raised-button
+          *ngIf="!isLoggedOut()"
+          (click)="openAddFriendsDialog()"
+          color="primary"
+        >
+          Add Friends
+        </button>
+        <button
+          mat-raised-button
+          class="new-post"
           *ngIf="!isLoggedOut()"
           (click)="openSignupDialog()"
           color="primary"
